--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -24,5 +24,5 @@
             </div>
         </form>
     </div>
-    <div>¿No tienes cuenta? <a href="{{ url_for('show_signup_form') }}">Regístrate</a></div>
+    <div>You do not have an account? <a href="{{ url_for('show_signup_form') }}">Sign up</a></div>
 {% endblock %}
