--- a/templates/admin/post_form.html
+++ b/templates/admin/post_form.html
@@ -3,7 +3,7 @@
     {% if form.title.data %}
         {{ form.title.data }}
     {% else %}
-        Nueva entrada
+        New Entry
     {% endif %}
 {% endblock %}
 {% block content %}
