--- a/templates/signup_form.html
+++ b/templates/signup_form.html
@@ -1,5 +1,5 @@
 {% extends "base_template.html" %}
-{% block title %}Registro de usuarios{% endblock %}
+{% block title %}User Registration{% endblock %}
 {% block content %}
     {% if error %}
         <p style="color: red;"><strong>Error:</strong> {{ error }}
