--- a/templates/post_view.html
+++ b/templates/post_view.html
@@ -3,4 +3,30 @@
 {% block content %}
     <h1>{{ post.title }}</h1>
     {{ post.content }}
+    <h2>Comments</h2>
+    {% if current_user.is_authenticated %}
+    <div>
+        <form action="" method="post" novalidate>
+            {{ form.hidden_tag() }}
+            <div>
+                {{ form.content.label }}
+                {{ form.content }}<br>
+                {% for error in form.content.errors %}
+                <span style="color: red;">{{ error }}</span>
+                {% endfor %}
+            </div>
+            <div>
+                {{ form.submit() }}
+            </div>
+        </form>
+    </div>
+    {% endif %}
+    <div id="comments">
+        {% for comment in post.comments %}
+            <div>
+                <div>User {{comment.user_name}} commented:</div>
+                <div>{{ comment.content }}</div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
